<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <!--辅助线，不显示 但是元素可以依赖它摆放正确位置-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#dedede"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline30">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom">


            <TextView
                android:id="@+id/texthistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="#888888"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textresult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/text0"
                android:textColor="@android:color/black"
                android:textSize="40sp"/>
        </LinearLayout>
    </ScrollView>
    <View
        android:id="@+id/horizontal_divide44"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dedede"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.44"/>

    <View
        android:id="@+id/horizontal_divide58"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dedede"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.58"/>
    <View
        android:id="@+id/horizontal_divide72"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dedede"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.72"/>
    <View
        android:id="@+id/horizontal_divide86"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dedede"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.86"/>
    <View
        android:id="@+id/horizontal_divide100"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dedede"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/vertical_divide25"
        android:layout_width="1px"
        android:layout_height="0dp"
        android:background="#dedede"
        app:layout_constraintTop_toBottomOf="@+id/guideline30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"/>
    <View
        android:id="@+id/vertical_divide50"
        android:layout_width="1px"
        android:layout_height="0dp"
        android:background="#dedede"
        app:layout_constraintTop_toBottomOf="@+id/guideline30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"/>
    <View
        android:id="@+id/vertical_divide75"
        android:layout_width="1px"
        android:layout_height="0dp"
        android:background="#dedede"
        app:layout_constraintTop_toBottomOf="@+id/guideline30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"/>

    <TextView
        android:id="@+id/text_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text_clear"
        android:textColor="@android:color/holo_orange_dark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/guideline30"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divide44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_divide25" />
    <TextView
        android:id="@+id/text_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text_back"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/guideline30"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divide44"
        app:layout_constraintStart_toStartOf="@id/vertical_divide25"
        app:layout_constraintEnd_toStartOf="@id/vertical_divide50" />
    <TextView
        android:id="@+id/text_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text_divide"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/guideline30"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divide44"
        app:layout_constraintStart_toStartOf="@id/vertical_divide50"
        app:layout_constraintEnd_toStartOf="@id/vertical_divide75" />
    <TextView
        android:id="@+id/text_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text_multiply"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/guideline30"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divide44"
        app:layout_constraintStart_toStartOf="@id/vertical_divide75"
        app:layout_constraintEnd_toEndOf="parent"  />
    <TextView
        android:id="@+id/text7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text7"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divide44"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divide58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_divide25" />
    <TextView
        android:id="@+id/text8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text8"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divide44"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divide58"
        app:layout_constraintStart_toStartOf="@id/vertical_divide25"
        app:layout_constraintEnd_toStartOf="@id/vertical_divide50" />
    <TextView
        android:id="@+id/text9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text9"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divide44"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divide58"
        app:layout_constraintStart_toStartOf="@id/vertical_divide50"
        app:layout_constraintEnd_toStartOf="@id/vertical_divide75" />
    <TextView
        android:id="@+id/text_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text_minus"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divide44"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divide58"
        app:layout_constraintStart_toStartOf="@id/vertical_divide75"
        app:layout_constraintEnd_toEndOf="parent"  />
    <TextView
        android:id="@+id/text4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text4"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divide58"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divide72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_divide25" />
    <TextView
        android:id="@+id/text5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text5"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divide58"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divide72"
        app:layout_constraintStart_toStartOf="@id/vertical_divide25"
        app:layout_constraintEnd_toStartOf="@id/vertical_divide50" />
    <TextView
        android:id="@+id/text6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text6"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divide58"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divide72"
        app:layout_constraintStart_toStartOf="@id/vertical_divide50"
        app:layout_constraintEnd_toStartOf="@id/vertical_divide75" />
    <TextView
        android:id="@+id/text_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text_add"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divide58"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divide72"
        app:layout_constraintStart_toStartOf="@id/vertical_divide75"
        app:layout_constraintEnd_toEndOf="parent"  />
    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text1"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divide72"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divide86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_divide25" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text2"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divide72"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divide86"
        app:layout_constraintStart_toStartOf="@id/vertical_divide25"
        app:layout_constraintEnd_toStartOf="@id/vertical_divide50" />
    <TextView
        android:id="@+id/text3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text3"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divide72"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divide86"
        app:layout_constraintStart_toStartOf="@id/vertical_divide50"
        app:layout_constraintEnd_toStartOf="@id/vertical_divide75" />
    <TextView
        style="@style/ButtomTheme"
        android:id="@+id/text_equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/text_equle"
        android:textColor="@android:color/holo_orange_dark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divide72"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_divide75"
        app:layout_constraintEnd_toEndOf="parent"  />
    <TextView
        android:id="@+id/text_percent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text_percent"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divide86"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_divide25" />
    <TextView
        android:id="@+id/text0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text0"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divide86"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_divide25"
        app:layout_constraintEnd_toStartOf="@id/vertical_divide50" />
    <TextView
        android:id="@+id/text_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_background"
        android:text="@string/text_dot"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divide86"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_divide50"
        app:layout_constraintEnd_toStartOf="@id/vertical_divide75" />

</androidx.constraintlayout.widget.ConstraintLayout>